--- a/04-linear-reg.Rmd
+++ b/04-linear-reg.Rmd
@@ -176,7 +176,7 @@ set.seed(21)
 plot_data = generate_data(sigma = 2)
 ```
 
-In order to be able to reason about good or bad line, we need to denote the *output* of equation \@ref(eq:bline). We call the value $\hat{y}_i$ the *predicted value* for obseration $i$, after having chosen values $b_0$ and $b_1$:
+In order to be able to reason about good or bad line, we need to denote the *output* of equation \@ref(eq:bline). We call the value $\hat{y}_i$ the *predicted value* for obseration $i$, after having chosen some particular values $b_0$ and $b_1$:
 
 $$
 \hat{y}_i = b_0 + b_1 x_i (\#eq:abline-pred)
@@ -197,7 +197,7 @@ $$
 You realize of course that $\hat{y}_i = y_i - e_i$, which just means that our prediction is the observed value $y_i$ minus any error $e_i$ we make. In other words, $e_i$ is what is left to be explained on top of the line $b_0 + b_1 x_i$, hence, it's a residual to explain $y_i$. Here are $y,\hat{y}$ and the resulting $e$ which are plotted in figure \@ref(fig:line-arrows):
 
 ```{r,echo=FALSE}
-knitr:::kable(subset(plot_data,select=c(y,y_hat,error)),align = "c",digits = 2)
+knitr:::kable(subset(plot_data,select=c(x,y,y_hat,error)),align = "c",digits = 2)
 ```
 
 If our line was a **perfect fit** to the data, all $e_i = 0$, and the column `error` would display `0` for each row - there would be no errors at all. (All points in figure \@ref(fig:line-arrows) would perfectly line up on a straight line). 
@@ -205,7 +205,7 @@ If our line was a **perfect fit** to the data, all $e_i = 0$, and the column `er
 Now, back to our claim that this particular line is the *best* line. What exactly characterizes this best line? We now come back to what we said above - *how to make the errors as small as possible*? Keeping in mind that each residual $e_i$ is $y_i - \hat{y}_i$, we have the following minization problem to solve:
 
 \begin{align}
-e_i & = y_i - \hat{y}_i = y_i - \left(b_0 + b_1 x_i\right)\\
+e_i & = y_i - \hat{y}_i = y_i - \underbrace{\left(b_0 + b_1 x_i\right)}_\text{prediction}\\
 e_1^2 + \dots + e_N^2 &= \sum_{i=1}^N e_i^2 \equiv \text{SSR}(b_0,b_1) \\
 (b_0,b_1) &= \arg \min_{\text{int},\text{slope}} \sum_{i=1}^N \left[y_i - \left(\text{int} + \text{slope } x_i\right)\right]^2 (\#eq:ols-min)
 \end{align}
@@ -227,13 +227,20 @@ We illustrate this in figure \@ref(fig:line-squares). This is the same data as i
 library(ScPoEconometrics)
 launchApp("reg_simple_arrows")
 launchApp("reg_simple") # with squared errors
+launchApp("SSR_cone") # visualize the minimzation problem from above!
 ```
 
+Most of our `apps` have an associated `about` document, which gives extra information and explanations. After you have looked at all three apps, we invite you thus to have a look at the associated explainers by typing
 
+```{r,eval=FALSE}
+aboutApp("reg_simple_arrows")
+aboutApp("reg_simple") 
+aboutApp("SSR_cone") 
+```
 
 ### Ordinary Least Squares (OLS) Estimator
 
-The method to compute (or *estimate*) $b_0$ and $b_1$ we illustrated above is called *Ordinary Least Squares*, or OLS. $b_0$ and $b_1$ are also often called the *OLS coefficients*. By solving problem \@ref(eq:ols-min) one can derive an explicit formula for them:
+The method to compute (or *estimate*) $b_0$ and $b_1$ we illustrated above is called *Ordinary Least Squares*, or OLS. $b_0$ and $b_1$ are therefore also often called the *OLS coefficients*. By solving problem \@ref(eq:ols-min) one can derive an explicit formula for them:
 
 $$
 b_1 = \frac{cov(x,y)}{var(x)},  (\#eq:beta1hat)
@@ -287,10 +294,9 @@ Least Squares **without intercept** (i.e. with $b_0=0$) is a line that passes th
 ```
 <br>
 
-In this case we only get to choose the slope $b_1$ of this anchored line.^[ This slope is related to the angle between vectors $\mathbf{a} = (\overline{x},\overline{y})$, and $\mathbf{b} = (\overline{x},0)$. Hence, it's related to the [scalar projection](https://en.wikipedia.org/wiki/Scalar_projection) of $\mathbf{a}$ on $\mathbf{b}$.] You should now try out both of those restrictions on our linear model by spending some with 
+In this case we only get to choose the slope $b_1$ of this anchored line.^[ This slope is related to the angle between vectors $\mathbf{a} = (\overline{x},\overline{y})$, and $\mathbf{b} = (\overline{x},0)$. Hence, it's related to the [scalar projection](https://en.wikipedia.org/wiki/Scalar_projection) of $\mathbf{a}$ on $\mathbf{b}$.] You should now try out both of those restrictions on our linear model by spending some time with 
 
 ```{r,eval=FALSE}
-library(ScPoEconometrics)
 launchApp("reg_constrained")
 ```
 
@@ -300,19 +306,20 @@ By *centering* or *demeaning* a regression, we mean to substract from both $y$ a
 
 \begin{align}
 b_1 &= \frac{\frac{1}{N}\sum_{i=1}^N \tilde{x}_i \tilde{y}_i}{\frac{1}{N}\sum_{i=1}^N \tilde{x}_i^2}\\
-    &= \frac{\frac{1}{N}\sum_{i=1}^N (x_i - \bar{x}) (y_i - \bar{y})}{\frac{1}{N}\sum_{i=1}^N (x_i - \bar{x})^2}  (\#eq:bline-centered)
+    &= \frac{\frac{1}{N}\sum_{i=1}^N (x_i - \bar{x}) (y_i - \bar{y})}{\frac{1}{N}\sum_{i=1}^N (x_i - \bar{x})^2} \\
+    &= \frac{cov(x,y)}{var(x)}
+    (\#eq:bline-centered)
 \end{align}
 
-From this, you can see the following: 
+This last expression is *identical* to the one in \@ref(eq:beta1hat)! It's the standard OLS estimate for the slope coefficient. We note the following: 
 
 ```{block type='tip'}
-Adding a constant to a regression produces the same result as centering all variables. So, unless all variables are centered, **always** include an intercept in the regression.
+Adding a constant to a regression produces the same result as centering all variables and estimating without intercept. So, unless all variables are centered, **always** include an intercept in the regression.
 ```
 <br>
 To get a better feel for what is going on here, you can try this out now by yourself by typing:
 
 ```{r,eval=FALSE}
-library(ScPoEconometrics)
 launchApp("demeaned_reg")
 ```
 
@@ -334,7 +341,6 @@ After we standardize both $y$ and $x$, the slope coefficient $b_1$ in the regres
 And also for this case we have a practical application for you. Just type this and play around with the app for a little while!
 
 ```{r,eval=FALSE}
-library(ScPoEconometrics)
 launchApp("reg_standardized")
 ```
 
@@ -359,8 +365,8 @@ in other words:
 ```{block type='tip'}
 The average of our predictions $\hat{y_i}$ is identically equal to the mean of the outcome $y$. This implies that the average of the residuals is equal to zero.
 ```
-
-Related to this result, we can show that the prediction $\hat{y}$ and the residuals are *uncorrelated*, something that is often called **orthogonality** between $\hat{y}_i$ and $e_i$. We would write
+<br>
+Related to this result, we can show that the prediction $\hat{y}$ and the residuals are *uncorrelated*, something that is often called **orthogonality** between $\hat{y}_i$ and $e_i$. We would write this as
 
 \begin{align}
 Cov(\hat{y},e) &=\frac{1}{N} \sum_{i=1}^N (\hat{y}_i-\bar{y})(e_i-\bar{e}) =   \frac{1}{N} \sum_{i=1}^N (\hat{y}_i-\bar{y})e_i \\
@@ -374,11 +380,18 @@ ss = subset(plot_data,select=c(y,y_hat,error))
 round(ss,2)
 ```
 
-Let's check that these things are true in this sample of data:
+Let's check that these claims are true in this sample of data. We want that
+
+1. The average of $\hat{y_i}$ to be the same as the mean of $y$
+2. The average of the errors should be zero.
+3. Prediction and errors should be uncorrelated.
 
 ```{r}
+# 1.
 all.equal(mean(ss$error), 0)
+# 2.
 all.equal(mean(ss$y_hat), mean(ss$y))
+# 3.
 all.equal(cov(ss$error,ss$y_hat), 0)
 ```
 
@@ -413,10 +426,16 @@ par(op)
 The important lesson from this example is the following:
 
 ```{block,type="warning"}
-<center>
 Always **visually inspect** your data, and don't rely exclusively on summary statistics like *mean, variance, correlation and regression line*. All of those assume a **linear** relationship between the variables in your data.
-</center>
 ```
+<br>
+The mission of Anscombe has been continued recently. As a result of this we can have a look at the `datasauRus` package, which pursues Anscbombe's idea through a multitude of funny data sets, all with the same linear statistics. Don't just compute the covariance, or you might actually end up looking at a Dinosaur! What? Type this to find out:
+
+```{r,eval=FALSE}
+launchApp("datasaurus")
+aboutApp("datasaurus")
+```
+
 
 ### Non-Linear Relationships in Data
 
@@ -497,7 +516,7 @@ Let's explore how to do this, using a real life dataset taken from the `Ecdat` p
 We can explore which variables are included in the dataset using the `names()` function:
 
 ```{r str, warning=F, message = F}
-library("Ecdat") # Attach the Ecdat library
+library("Ecdat") # Load the Ecdat library
 names(Caschool) # Display the variables of the Caschool dataset
 ```
 
@@ -515,7 +534,7 @@ Suppose a policymaker is interested in the following linear model:
 $$\text{testscr}_i = b_0 + b_1 \times \text{str}_i + e_i$$
 Where $\text{testscr}_i$ is the *average test score* for a given school $i$ and $\text{str}_i$ is the *Student/Teacher Ratio* (i.e. the average number of students per teacher) in the same school $i$. Again, $b_0$ and $b_1$ are the intercept and the slope of the regression line.
 
-The subscript $i$ indexes all unique elementary schools ($i \in \{1, 2, 3, \dots 420\}$) and $\epsilon_i$ is the error, or *residual*, of the regression. (Remember that our procedure for finding the line of best fit is to minimize the *sum of squared residuals* (SSR)).
+The subscript $i$ indexes all unique elementary schools ($i \in \{1, 2, 3, \dots 420\}$) and $e_i$ is the error, or *residual*, of the regression. (Remember that our procedure for finding the line of best fit is to minimize the *sum of squared residuals* (SSR)).
 
 ----
 
@@ -547,23 +566,16 @@ We will use the built-in `lm()` function to estimate the coefficients $b_0$ and 
 In the context of our example, the function call is therefore:
 
 ```{r lmfit}
-lm(formula = testscr ~ str, data = Caschool)
-```
-
-As we can see, `R` returns its estimates for the Intercept and Slope coefficients, $b_0 =$ `r round(lm(testscr ~ str, Caschool)$coefficients[1], 2)` and $b_1 =$ `r round(lm(testscr ~ str, Caschool)$coefficients[2], 2)`. The estimated relationship between a school's Student/Teacher Ratio and its average test results is **negative**.
-
-Running a linear regression in `R` is typically a two-steps process. You first assign the output of the `lm()` call to an object and **then** call a second function (for our purpose, mainly `summary()`) on the resulting object. In practice, this looks like this :
-
-
-```{r lmfit_2_steps}
-# assign lm() output to some object `fit_california`
-fit_california <- lm(formula = testscr ~ str, data = Caschool)
+# assign lm() output to some object `fit_cal`
+fit_cal <- lm(formula = testscr ~ str, data = Caschool)
 
 # ask R for the regression summary
-summary(fit_california) 
+summary(fit_cal) 
 ```
 
-Again, we recognize our intercept and slope estimates from before, alongside some other numbers and indications. This output is called a *regression table*, and you will be able to decypher it by the end of this course. You should be able to find an interpret the $R^2$ though: Are we explaining a lot of the variance in `testscr` with this simple model, or not?
+As we can see, `R` returns its estimates for the Intercept and Slope coefficients, $b_0 =$ `r round(coef(fit_cal)[1], 2)` and $b_1 =$ `r round(coef(fit_cal)[2], 2)`. The estimated relationship between a school's Student/Teacher Ratio and its average test results is **negative**.
+
+The output of the `summary` method for an `lm` object is commonly called a *regression table*, and you will be able to decypher it by the end of this course. You should be able to find an interpret the $R^2$ though: Are we explaining a lot of the variance in `testscr` with this simple model, or are we not?
 
 ### Plotting the regression line
 
@@ -574,7 +586,7 @@ plot(formula = testscr ~ str,
      data = Caschool,
      xlab = "Student/Teacher Ratio",
      ylab = "Average Test Score", pch = 21, col = 'blue')# same plot as before
-abline(fit_california, col = 'red') # add regression line
+abline(fit_cal, col = 'red') # add regression line
 
 ```
 
